# byteguard

./: .gitignore  LICENSE  README.md  pyproject.toml
byteguard/: __init__.py  bot.py
